@@ -13,7 +13,7 @@ visual appearence of this application:
    icons to use, and some resources that are used by the widgets.
    Do not confuse the application themes with tile themes.
 
-We only focus on the application themes, the last item, here.
+We only focus on the application themes, the second item, here.
 
 
 Images
