@@ -14,6 +14,7 @@ Coccinella-0.9*
  o updated pep/mood code to version 1.0 of the PEP protocol
  o support for geolocation
  o much faster roster population code
+ o added roster search method
 
 Coccinella-0.95.16 (20070214):
 
